test/library/standard/Sort/errors/sortDomainArray.assoc4.good
sortDomainArray.chpl:52: error: sort() is currently only supported for 1D rectangular arrays
